# airspace_utils

./: .gitignore  README.md  overlay.sh  pyproject.toml  requirements.txt  run.py
src/yaixm/: __init__.py  boundary.py  openair.py  util.py
yaixm/: __init__.py  boundary.py  cli.py  cli_util.py  convert.py  geojson.py  helpers.py  obstacle.py  openair.py  overlay.py  parse_openair.py  util.py  util_cli.py  yaixm.py
yaixm/data/: schema.yaml
