[project]
name = "yaixm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "freetype-py>=2.5.1",
    "geopandas>=1.1.3",
    "jsonschema>=4.26.0",
    "lark>=1.3.1",
    "pygeodesy>=26.5.26",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
cli = "yaixm:run.cli"

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"
